+ edit features & paragraphs, add new animation moveTop onhover resonsive h1/h2

--- a/src/index.html
+++ b/src/index.html
@@ -80,36 +80,62 @@
                         <div class="img">
                             <img src="./images/Features/1.svg" alt="Privacy" />
                         </div>
+                        <p>
+                            We respect your private life and we do not collect any of your
+                            personal data
+                        </p>
                     </li>
                     <li class="card">
                         <h3>Full control</h3>
                         <div class="img">
                             <img src="./images/Features/2.svg" alt="Full control" />
                         </div>
+                        <p>
+                            We offer you several options to customize your next password
+                            and be satisfied with our service
+                        </p>
                     </li>
                     <li class="card">
                         <h3>Open source</h3>
                         <div class="img">
                             <img src="./images/Features/3.svg" alt="Open source" />
                         </div>
+                        <p>
+                            Our site is open source under the MIT license, which gives it
+                            great reliability and security
+                        </p>
                     </li>
                     <li class="card">
                         <h3>No ads</h3>
                         <div class="img">
                             <img src="./images/Features/4.svg" alt="No ads" />
                         </div>
+                        <p>
+                            Our service is free and voluntary and we eliminated pop-ups,
+                            banners, and video ads, so you can see what really matters.
+                            You can support us on Patreon
+                        </p>
                     </li>
                     <li class="card">
                         <h3>Modern</h3>
                         <div class="img">
                             <img src="./images/Features/5.svg" alt="Modern" />
                         </div>
+                        <p>
+                            We built our website with the latest technologies to make it
+                            modern, attractive, easy to use and to give you a unique
+                            experience
+                        </p>
                     </li>
                     <li class="card">
                         <h3>Memorable</h3>
                         <div class="img">
                             <img src="./images/Features/6.svg" alt="Memorable" />
                         </div>
+                        <p>
+                            Our goal is to offer you a unique experience so we made easy
+                            sentences to remember the generated passwords
+                        </p>
                     </li>
                 </ul>
             </div>
