cursor: pointer for chevrons and profile, + profile js + correct style
+img::before{content: "......"}

--- a/src/index.html
+++ b/src/index.html
@@ -259,7 +259,7 @@
         </div>
         <div class="aboutUs parent">
             <div class="container">
-                <div class="profile active">
+                <div class="profile">
                     <div class="public">
                         <div class="img">
                             <img src="./images/AboutUs/2.png" alt="IDJA Mohamed Ouanis" />
