--- a/src/index.html
+++ b/src/index.html
@@ -362,7 +362,7 @@
                         <p>Need even more help? Click the button below</p>
                     </li>
                 </ul>
-                <button type="submit">Email us</button>
+                <button type="submit" id="emailButton">Email us</button>
                 <div class="img bg">
                     <img
                         src="./images/ContactUs/Contact us-cuate.svg"
@@ -407,9 +407,9 @@
                 </ul>
             </div>
         </div>
-        <div class="contactForm">
+        <div class="contactForm" id="popupForm">
             <div class="container">
-                <i class="close fas fa-times-circle"></i>
+                <i class="close fas fa-times-circle" id="ClosePopupForm"></i>
                 <h3>Contact us</h3>
                 <p>
                     Thank you for your interest in our services. Please fill out the form
