reponsive about us, typography aligh left in large screens

--- a/src/index.html
+++ b/src/index.html
@@ -335,7 +335,10 @@
         </div>
         <div class="contactUs parent" id="contactUs">
             <div class="container">
-                <h2>Need help? Have some question? suggestion?</h2>
+                <h2>
+                    Need help? <br />
+                    Have some question? suggestion?
+                </h2>
                 <ul class="column">
                     <li>
                         <span>1</span>
