--- a/src/index.html
+++ b/src/index.html
@@ -19,40 +19,42 @@
         <link rel="stylesheet" href="./scss/style.scss" />
     </head>
     <body class="light">
-        <nav class="topnav" id="topnav">
-            <div class="container">
-                <div class="logo">
-                    <div class="img"><img src="./images/logo.jpg" alt="imo logo" /></div>
-                    <h3>IMO</h3>
-                </div>
-                <div class="left">
-                    <div class="links">
-                        <ul>
-                            <li><a href="#main">Main</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#faqs">FAQs</a></li>
-                            <li><a href="#aboutUs">About us</a></li>
-                            <li><a href="#contactUs">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="buttons">
-                        <ul>
-                            <li class="theme-button">
-                                <button id="switchTheme">
-                                    <i class="fas fa-sun"></i>
-                                </button>
-                            </li>
-                            <li class="menu" id="menu">
-                                <button>
-                                    <i class="fas fa-bars"></i>
-                                </button>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
         <header class="parent" id="main">
+            <nav class="topnav" id="topnav">
+                <div class="container">
+                    <div class="logo">
+                        <div class="img">
+                            <img src="./images/logo.jpg" alt="imo logo" />
+                        </div>
+                        <h3>IMO</h3>
+                    </div>
+                    <div class="left">
+                        <div class="links">
+                            <ul>
+                                <li><a href="#main">Main</a></li>
+                                <li><a href="#features">Features</a></li>
+                                <li><a href="#faqs">FAQs</a></li>
+                                <li><a href="#aboutUs">About us</a></li>
+                                <li><a href="#contactUs">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="buttons">
+                            <ul>
+                                <li class="theme-button">
+                                    <button id="switchTheme">
+                                        <i class="fas fa-sun"></i>
+                                    </button>
+                                </li>
+                                <li class="menu" id="menu">
+                                    <button>
+                                        <i class="fas fa-bars"></i>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
             <div class="container">
                 <div class="left_box">
                     <div class="title">
