edit sticky topnav color, solve topnva issiue whith header page and contact form, add cyan30 color '

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                     </div>
                     <div class="left">
                         <div class="links">
-                            <ul>
+                            <ul class="container">
                                 <li><a href="#main">Main</a></li>
                                 <li><a href="#features">Features</a></li>
                                 <li><a href="#faqs">FAQs</a></li>
