+settings script + agreement beteen header and settings

--- a/src/index.html
+++ b/src/index.html
@@ -136,7 +136,7 @@
                                 </div>
                             </li>
                         </ul>
-                        <button type="submit">Apply</button>
+                        <button type="submit" id="applySettings">Apply</button>
                     </div>
                 </div>
                 <div class="img bg">
