new: go to a location minus the top padding

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,27 @@
                     <div class="left">
                         <div class="links">
                             <ul class="container">
-                                <li><a href="#main">Main</a></li>
-                                <li><a href="#features">Features</a></li>
-                                <li><a href="#faqs">FAQs</a></li>
-                                <li><a href="#aboutUs">About us</a></li>
-                                <li><a href="#contactUs">Contact</a></li>
+                                <li>
+                                    <a href="javascript:void(0)" data-id="main">Main</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" data-id="features"
+                                        >Features</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" data-id="faqs">FAQs</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" data-id="aboutUs"
+                                        >About us</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)" data-id="contactUs"
+                                        >Contact</a
+                                    >
+                                </li>
                             </ul>
                         </div>
                         <div class="buttons">
@@ -514,14 +530,27 @@
                             </li>
                         </ul>
                     </section>
-                    <section>
+                    <section id="footerNav">
                         <h3>Navigation</h3>
                         <ul>
-                            <li><a href="#main">Main</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#faqs">FAQs</a></li>
-                            <li><a href="#aboutUs">About Us</a></li>
-                            <li><a href="#contactUs">Contact Us</a></li>
+                            <li><a href="javascript:void(0)" data-id="main">Main</a></li>
+                            <li>
+                                <a href="javascript:void(0)" data-id="features"
+                                    >Features</a
+                                >
+                            </li>
+
+                            <li><a href="javascript:void(0)" data-id="faqs">FAQs</a></li>
+                            <li>
+                                <a href="javascript:void(0)" data-id="aboutUs"
+                                    >About Us</a
+                                >
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)" data-id="contactUs"
+                                    >Contact Us</a
+                                >
+                            </li>
                         </ul>
                     </section>
                     <section>
