adding licence link

--- a/src/index.html
+++ b/src/index.html
@@ -590,7 +590,13 @@
                                     >Github</a
                                 >
                             </li>
-                            <li><a href="#">License</a></li>
+                            <li>
+                                <a
+                                    href="https://github.com/rouanis5/password-generator/blob/main/LICENSE"
+                                    target="_blank"
+                                    >License</a
+                                >
+                            </li>
                         </ul>
                     </section>
                 </div>
