add the licence to features card

--- a/src/index.html
+++ b/src/index.html
@@ -198,8 +198,8 @@
                             <img src="./images/Features/3.svg" alt="Open source" />
                         </div>
                         <p>
-                            Our site is open source under the MIT license, which gives it
-                            great reliability and security
+                            Our site is open source under the GNU AGPLv3 license, which
+                            gives it great reliability and security
                         </p>
                     </li>
                     <li class="card">
