finish the password generator

--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
                     </div>
                     <form class="generator __clipboard">
                         <div class="screen">
-                            <input type="text" name="fgenerator" id="generator" />
-                            <label for="fgenerator">
+                            <input type="text" name="fscreen" id="screen" value="" />
+                            <label for="fscreen">
                                 <i class="fas fa-clipboard"></i>
                             </label>
                         </div>
@@ -89,7 +89,7 @@
                                 Settings
                                 <i class="fas fa-cog"></i>
                             </button>
-                            <button type="button">
+                            <button type="button" id="generate">
                                 Generate
                                 <i class="fas fa-check-circle"></i>
                             </button>
@@ -118,7 +118,6 @@
                             </h3>
                             <i class="close fas fa-times-circle" id="closeSettings"></i>
                         </div>
-
                         <ul>
                             <li class="button active">
                                 <h4>1</h4>
