add clipboad function

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                     <form class="generator __clipboard">
                         <div class="screen">
                             <input type="text" name="fscreen" id="screen" value="" />
-                            <label for="fscreen">
+                            <label for="fscreen" id="copyScreen">
                                 <i class="fas fa-clipboard"></i>
                             </label>
                         </div>
