edit clipboad: js scss(+.copied)
remove selection, add feedback message

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
                         </p>
                         <div class="screen">
                             <input type="text" name="fremember" id="remember" />
-                            <label for="fremember">
+                            <label for="fremember" id="copySentence">
                                 <i class="fas fa-clipboard"></i>
                             </label>
                         </div>
