--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="img bg">
                     <img
-                        src="./images/Home/1v2.svg"
+                        src="./images/Home/1.svg"
                         alt="A happy man satisfied with our service"
                     />
                 </div>
@@ -476,10 +476,7 @@
                 </ul>
                 <button type="submit" id="emailButton">Email us</button>
                 <div class="img bg">
-                    <img
-                        src="./images/ContactUs/Contact us-cuate.svg"
-                        alt="customers service"
-                    />
+                    <img src="./images/ContactUs/1.svg" alt="customers service" />
                 </div>
             </div>
         </div>
