correct header>p + add required to contactUs form

--- a/src/index.html
+++ b/src/index.html
@@ -102,10 +102,7 @@
                 <div class="left_box">
                     <div class="title">
                         <h1>Password generator</h1>
-                        <p>
-                            Generate secure, random passwords to stay safe online. easy to
-                            memorize
-                        </p>
+                        <p>Generate secure, random passwords to stay safe online</p>
                     </div>
                     <form
                         class="generator __clipboard"
@@ -455,9 +452,7 @@
                             First, check out our fun
                             <a href="#faqs">FAQs</a>
                             &
-                            <a href="https://www.instagram.com/med.ouanis42"
-                                >Help Guides</a
-                            >
+                            <a href="javacript:void(0)">Help Guides</a>
                             ...
                         </p>
                     </li>
@@ -465,7 +460,7 @@
                         <span>2</span>
                         <p>
                             Still have a quick question? Get an instant reply on
-                            <a href="">Instagram</a>
+                            <a href="https://www.instagram.com/med.ouanis42">Instagram</a>
                             ...
                         </p>
                     </li>
@@ -530,18 +525,27 @@
                         name="fsubject"
                         id="subject"
                         placeholder="Subject"
+                        required
                     />
-                    <input type="text" name="fname" id="name" placeholder="Your name" />
+                    <input
+                        type="text"
+                        name="fname"
+                        id="name"
+                        placeholder="Your name"
+                        required
+                    />
                     <input
                         type="email"
                         name="femail"
                         id="email"
                         placeholder="Your email"
+                        required
                     />
                     <textarea
                         name="fmessage"
                         id="message"
                         placeholder="Message"
+                        required
                     ></textarea>
                     <button type="submit">Send</button>
                 </form>
